fixed recent sold products css, updated css on product cards, updated scrollbars and fixed footer

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -63,21 +63,83 @@
   overflow-x: hidden;
 }
 
+#homepage-products-container::-webkit-scrollbar,
+#filtered-products-container::-webkit-scrollbar,
+#recent-sold-container::-webkit-scrollbar {
+  width: 8px;
+}
+
+#homepage-products-container::-webkit-scrollbar-track,
+#filtered-products-container::-webkit-scrollbar-track,
+#recent-sold-container::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+#homepage-products-container::-webkit-scrollbar-thumb,
+#filtered-products-container::-webkit-scrollbar-thumb,
+#recent-sold-container::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+}
+
+#homepage-products-container::-webkit-scrollbar-thumb:hover,
+#filtered-products-container::-webkit-scrollbar-thumb:hover,
+#recent-sold-container::-webkit-scrollbar-thumb:hover {
+  background: #999;
+}
+
 #recent-sold-container {
   height: 10rem;
   display: flex;
   flex-direction: column;
+  margin-top: 5rem;
+  margin-bottom: 10rem;
+}
+
+#recently-sold-h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #recent-sold-ul {
-  justify-content: center;
   display: flex;
+  justify-content: center;
+  list-style-type: none;
+  padding: 0;
+}
+
+#recent-sold-li {
+  display: flex;
+  gap: 10rem;
+  justify-content: center;
   align-items: center;
-  list-style: none;
+  height: 10rem;
+  width: 10%;
+}
+
+#recent-sold-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100rem !important;
+  height: 10rem;
+  border: 1px solid #0000002f;
+  background-color: #f8f9fa;
+  margin-top: 15rem;
+  margin-bottom: 10rem;
+  border-radius: 10px;
 }
 
 #recent-sold-p {
-  margin-top: 5px;
+  width: 10rem;
+  color: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+  padding: 5px;
 }
 
 #filtered-products-container {
